# tkan-torch-copilot

./: .flake8  README.md  __init__.py  pyproject.toml  spline.py  spline.py:Zone.Identifier  tkan.py
.github/workflows/: test_and_lint.yml
examples/: train_test_example.py  usage_example.py
tests/: test_spline.py  test_tkan.py
